--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 <body>
     <header>
         Intellectual History Website
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="intellectualhistorypage.html">Digital Technologies in Intellectual History</a>
+            <a href="apipage.html">APIs</a>
+            <a href="githubpage.html">GitHub</a>
+        </nav>
     </header>
     <main>
         <section>
             <div id="markdown"></div>
-        </section>
-        <section>
-            <nav>
-                <a href="intellectualhistorypage.html">Digital Technologies in Intellectual History</a>
-                <a href="apipage.html">APIs</a>
-                <a href="githubpage.html">GitHub</a>
-            </nav>
         </section>
     </main>
 </body>
