add voltaire-letters.png image

--- a/intellectualhistorypage.html
+++ b/intellectualhistorypage.html
@@ -20,6 +20,10 @@
         <section>
             <div id="markdown"></div>
         </section>
+        <section>
+            <img src="voltaire-letters.png" alt="Voltaire Letters">
+            <p>A map of French writer and philosopher Voltaire's correspondences, part of Stanford University's "Mapping the Republic of Letters" project. </p>
+        </section>
     </main>
 </body>
 </html>
