--- a/apipage.html
+++ b/apipage.html
@@ -75,4 +75,8 @@ document.getElementById("searchBtn").addEventListener("click", function () {
             `;
         })
 });
+.catch(error => {
+    console.error("Error fetching API:", error);
+    document.getElementById("results").innerHTML = "<p>Error retrieving data.</p>";
+});
 </script>
