--- a/apipage.html
+++ b/apipage.html
@@ -32,7 +32,7 @@
 </html>
 
 <script>
-  fetch("githubpage.md")
+  fetch("apipage.md")
     .then(response => response.text())
     .then(md => {
       document.getElementById("markdown").innerHTML = marked.parse(md);
