--- a/apipage.html
+++ b/apipage.html
@@ -22,10 +22,7 @@
             <div id="markdown"></div>
         </section>
         <section>
-          <input type="text" id="searchTerm" placeholder="Enter query term">
-          <button id="searchBtn">Search</button>
-          
-          <div id="results"></div>
+          <div id="europeanaAPI"></div>
         </section>
     </main>
 </body>
@@ -39,45 +36,13 @@
 </script>
 
 <script>
-document.getElementById("searchBtn").addEventListener("click", function () {
-    
-    const query = document.getElementById("searchTerm").value.trim();
-    if (!query) {
-        alert("Please enter a search term.");
-        return;
+    async function getEuropeana(){
+        const response = await fetch('https://api.europeana.eu/record/v2/search.json?query=aarhus&wskey=latexerate&media=True&reusability=True&sort=random');
+        const data = await response.json();
+        const image = data.items[0].edmPreview[0]
+        document.getElementById("europeanaAPI").innerHTML = `
+              <img src="${image}" alt="API Image" style="max-width: 300px;">;
     }
-
-    const url = `https://api.kb.dk/data/rest/api/text?q=${encodeURIComponent(query)}&sort=position_ssi asc&rows=1&start=0&wt=json&indent=on`;
-
-    fetch(url)
-        .then(response => response.json())
-        .then(data => {
-            const docs = data.response.docs;
-
-            if (!docs || docs.length === 0) {
-                document.getElementById("results").innerHTML = "<p>No results found.</p>";
-                return;
-            }
-
-            const doc = docs[0];
-
-            const title = doc.sort_title_ssi || "No title available";
-            const author = doc.author_name_ssi || "No author available";
-            const text = (doc.text_tsim && doc.text_tsim[0]) || "No text available";
-
-            document.getElementById("results").innerHTML = `
-                <h3>Result:</h3>
-                <ol>
-                    <li><strong>Title:</strong> ${title}</li>
-                    <li><strong>Author:</strong> ${author}</li>
-                    <li><strong>Text:</strong> ${text}</li>
-                </ol>
-            `;
-        })
-        .catch(error => {
-            console.error("Error fetching API:", error);
-            document.getElementById("results").innerHTML = "<p>Error retrieving data.</p>";
-        });
-});
 </script>
+
 </html>
