--- a/apipage.html
+++ b/apipage.html
@@ -41,7 +41,7 @@
         const data = await response.json();
         const image = data.items[0].edmPreview[0]
         document.getElementById("europeanaAPI").innerHTML = `
-              <img src="${image}" alt="API Image" style="max-width: 300px;">;
+              <img src="${image}" alt="API Image" style="max-width: 300px;">
     }
 </script>
 
