--- a/apipage.html
+++ b/apipage.html
@@ -22,6 +22,7 @@
             <div id="markdown"></div>
         </section>
         <section>
+            <button onclick="getEuropeana()">Search Europeana</button>
           <div id="europeanaAPI"></div>
         </section>
     </main>
@@ -44,7 +45,6 @@
           <img src="${image}" alt="Europeana item" style="max-width: 300px;">
         `;
     }
-getEuropeana();
 </script>
 
 </html>
