--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        Intellectual History Website
+        <h1>Intellectual History Website</h1>        
         <nav>
             <a href="index.html">Home</a>
             <a href="intellectualhistorypage.html">Digital Technologies in Intellectual History</a>
