--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <section>
             <div id="markdown"></div>
         </section>
+        <section>
+            <img src=theatrum-orbis-terrarum.jpg>
+            <p>
+                Cover page for the first atlas, "Theatrum Orbis Terrarum" by Abraham Ortelius, first edition published in Anterpen in 1570.
+            </p>
+        </section>
     </main>
 </body>
 
