--- a/githubpage.html
+++ b/githubpage.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <h1>Intellectual History Website</h1>   
         <nav>
             <a href="index.html">Home</a>
             <a href="intellectualhistorypage.html">Digital Technologies in Intellectual History</a>
